added comments, delete unnecessary code

--- a/image_gen.ipynb
+++ b/image_gen.ipynb
@@ -96,17 +96,13 @@
     }
    ],
    "source": [
-    "#generate training data for the diffusion model. Each has 10000 samples, but different m/n ratio. OOD sample is rotated 90 degrees.\n",
     "\n",
-    "#data is of shape 10000*2\n",
     "numtarget = 1500\n",
     "newmoon,_ = make_moons(numtarget, noise=0.1)\n",
     "target = newmoon\n",
     "\n",
-    "#make ood set\n",
     "ood = make_ood(4000, -np.pi/4)\n",
     "\n",
-    "#make target p\n",
     "x_binedge = np.linspace(-2.5,3.5,31)\n",
     "y_binedge = np.linspace(-2.5,3.5,31)\n",
     "h_orig,xbin2,ybin2,img = plt.hist2d(target[:,0],target[:,1], bins=[x_binedge,y_binedge])\n",
@@ -140,6 +136,7 @@
     }
    ],
    "source": [
+    "# open the csv file for calculated distance, parse the data\n",
     "import csv\n",
     "with open('distance_1500_mn0_2_11_pi332132_5_iter20_noise2000.csv') as fd:\n",
     "    reader=csv.reader(fd, delimiter=' ')\n",
@@ -166,6 +163,7 @@
     }
    ],
    "source": [
+    "# create reference hellinger distance list between target and mixed dataset\n",
     "helling_list = []\n",
     "for rad in np.linspace(-np.pi*3/32, -np.pi/32, 5):\n",
     "    temp = []\n",
